# asan

./: .gitignore  1.c  CMakeLists.txt  Makefile  asan_test  asan_test.c  func1.c  func2.c
double_free/: CMakeLists.txt  Makefile  double_free  double_free.c
include/: asan_mem.h
libs/: CMakeLists.txt  Makefile  asan_mem.c
use_after_free/: CMakeLists.txt  Makefile  use_after_free.c
